[package]
name = "postman-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
clap = { version = "4.3.19", features = ["derive"] }
futures-core = "0.3.28"
futures-util = "0.3.28"
junit-report = "0.8.2"
regex = "1.9.1"
serde = { version = "1.0.175", features = ["derive"] }
serde_yaml = "0.9.25"
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["full"] }
strip-ansi-escapes = "0.1.1"
